Change Module.url and Application.url to be URI instead of URL
This allows to set non-http urls (f.e., for inner endpoints on
OpenShift3)